PackageRelationDiagramのindex.htmlでの並び順を浅いほうからに変更